# webauthn.io

./: .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  Gulpfile.js  LICENSE  Pipfile  README.md  config.json  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  main.go  package.json  process-scss.sh  pyproject.toml  run-tests.sh  start-dev.sh  start-prod.sh  update-prod-django.sh
.github/workflows/: unit_test.yml
_app/: gunicorn.cfg.py  manage.py
_app/homepage/: apps.py  const.py  cookies.py  exceptions.py  forms.py  helpers.py  logging.py  models.py  response.py  urls.py  views.py
_app/homepage/migrations/: 0001_initial.py  0002_delete_webauthncredential.py
_app/homepage/services/: __init__.py  authentication.py  credential.py  metadata.py  redis.py  registration.py  session.py
_app/homepage/static/: simplewebauthn-browser-5.0.0.index.js  styles.css
_app/homepage/tests/: e2e_ml_dsa.py  test_models.py  (+5 more)
_app/webauthnio/: asgi.py  settings.py  urls.py  wsgi.py
_caddy/: Caddyfile
_nginx/: nginx.conf
_nginx/templates/: default.conf.conf
config/: config.go
fido/: request.go  response.go
logger/: logger.go
models/: authenticator.go  authenticator_test.go  credential.go  credential_test.go  models.go  models_test.go  rp.go  rp_test.go  session_data_test.go  user.go
server/: assertion.go  assertion_test.go  credential.go  dashboard.go  fido-conformance.go  middleware.go  response.go  server.go  server_test.go  user.go
session/: session.go
static/js/: webauthn.js
templates/: base.html  index.html  info.html  login.html
(+34 files in other folders)
